--- a/app/templates/admin/user_management/user_info.html
+++ b/app/templates/admin/user_management/user_info.html
@@ -44,86 +44,88 @@
         </ul>
     </div>
 
-    <!-- NAVBAR AND TABS FOR USER INFORMATION -->
-    <div class="navbar"></div>
-    <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
-
-    <a class="back-icon" href="{{ url_for('admin.user_management') }}">
-        <img src="{{ url_for('static', filename='images/Back.png') }}">
-    </a>
-
-    <ul class="nav nav-underline">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page">USER INFORMATION</a>
-        </li>
-    </ul>
-
-    <form action="{{ url_for('admin.user_info') }}" method="POST">
-        {{ UserForm.csrf_token }}
-
-        <!-- USER ID -->
-        <div class="inputBox code" style="display: none;">
-            <input type="hidden" name="user_id" value="{{ user_id }}">
+    <main>
+        <!-- NAVBAR AND TABS FOR USER INFORMATION -->
+        <div class="navbar">
+            <ul class="nav nav-underline">
+                <a class="back-icon" href="{{ url_for('admin.user_management') }}">
+                    <img src="{{ url_for('static', filename='images/Back.png') }}">
+                </a>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page">USER INFORMATION</a>
+                </li>
+            </ul>
         </div>
-        
-        <!-- USER INFORMATION -->
-        <div class="user-bg">
-            <div class="group-info">
-                <div class="u_row firstRow">
-                    <div class="inputBox fName">
-                        <input type="text" required="required" name="first_name" value="{{ user[3] }}" disabled>
-                        <span>FIRST NAME</span>
+
+        <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
+
+        <form action="{{ url_for('admin.user_info') }}" method="POST">
+            {{ UserForm.csrf_token }}
+
+            <!-- USER ID -->
+            <div class="inputBox code" style="display: none;">
+                <input type="hidden" name="user_id" value="{{ user_id }}">
+            </div>
+            
+            <!-- USER INFORMATION -->
+            <div class="user-bg">
+                <div class="group-info">
+                    <div class="u_row firstRow">
+                        <div class="inputBox fName">
+                            <input type="text" required="required" name="first_name" value="{{ user[3] }}" disabled>
+                            <span>FIRST NAME</span>
+                        </div>
+                        <div class="inputBox mName">
+                            <input type="text" required="required" name="middle_name" value="{{ user[4] }}" disabled>
+                            <span>MIDDLE NAME</span>
+                        </div>
+                        <div class="inputBox lName">
+                            <input type="text" required="required" name="last_name" value="{{ user[5] }}" disabled>
+                            <span>LAST NAME</span>
+                        </div>
                     </div>
-                    <div class="inputBox mName">
-                        <input type="text" required="required" name="middle_name" value="{{ user[4] }}" disabled>
-                        <span>MIDDLE NAME</span>
+
+                    <div class="u_row secondRow">
+                        <div class="inputBox username">
+                            <input type="text" required="required" name="username" value="{{ user[1] }}" disabled>
+                            <span>USERNAME</span>
+                        </div>
+
+                        <div class="inputBox gender">
+                            <select class="gender" name="gender" required="required" disabled>
+                                <option value="" disabled selected></option>
+                                <option value="MALE" {% if user[6] == "MALE" %} selected {% endif %}>MALE</option>
+                                <option value="FEMALE" {% if user[6] == "FEMALE" %} selected {% endif %}>FEMALE</option>
+                            </select>
+                            <span>GENDER</span>
+                        </div>
                     </div>
-                    <div class="inputBox lName">
-                        <input type="text" required="required" name="last_name" value="{{ user[5] }}" disabled>
-                        <span>LAST NAME</span>
+
+                    <div class="u_row thirdRow">
+                        <div class="inputBox password">
+                            <input type="text" required="required" name="password" value="{{ user[2] }}" disabled>
+                            <span>PASSWORD</span>
+                        </div>
+
+                        <div class="inputBox user_role">
+                            <select class="user_role" name="user_role" required="required" disabled>
+                                <option value="" disabled selected></option>
+                                <option value="doctor" {% if user[7] == "doctor" %} selected {% endif %}>doctor</option>
+                                <option value="receptionist" {% if user[7] == "receptionist" %} selected {% endif %}>receptionist</option>
+                                <option value="medtech" {% if user[7] == "medtech" %} selected {% endif %}>medtech</option>
+                                <option value="admin" {% if user[7] == "admin" %} selected {% endif %}>admin</option>
+                            </select>
+                            <span>USER ROLE</span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="u_row secondRow">
-                    <div class="inputBox username">
-                        <input type="text" required="required" name="username" value="{{ user[1] }}" disabled>
-                        <span>USERNAME</span>
-                    </div>
-
-                    <div class="inputBox gender">
-                        <select class="gender" name="gender" required="required" disabled>
-                            <option value="" disabled selected></option>
-                            <option value="MALE" {% if user[6] == "MALE" %} selected {% endif %}>MALE</option>
-                            <option value="FEMALE" {% if user[6] == "FEMALE" %} selected {% endif %}>FEMALE</option>
-                        </select>
-                        <span>GENDER</span>
-                    </div>
-                </div>
-
-                <div class="u_row thirdRow">
-                    <div class="inputBox password">
-                        <input type="text" required="required" name="password" value="{{ user[2] }}" disabled>
-                        <span>PASSWORD</span>
-                    </div>
-
-                    <div class="inputBox user_role">
-                        <select class="user_role" name="user_role" required="required" disabled>
-                            <option value="" disabled selected></option>
-                            <option value="doctor" {% if user[7] == "doctor" %} selected {% endif %}>doctor</option>
-                            <option value="receptionist" {% if user[7] == "receptionist" %} selected {% endif %}>receptionist</option>
-                            <option value="medtech" {% if user[7] == "medtech" %} selected {% endif %}>medtech</option>
-                            <option value="admin" {% if user[7] == "admin" %} selected {% endif %}>admin</option>
-                        </select>
-                        <span>USER ROLE</span>
-                    </div>
+                <div class="btn-container">
+                    <button class="btn-submit" type="submit" id="updateButton" style="display: none;">UPDATE</button>
                 </div>
             </div>
-
-            <div class="btn-container">
-                <button class="btn-submit" type="submit" id="updateButton" style="display: none;">UPDATE</button>
-            </div>
-        </div>
-    </form>
+        </form>
+    </main>
     
     {% if success %}
         <div id="successModal" class="modal" style="display: block;">
