--- a/app/templates/medtech/patient.html
+++ b/app/templates/medtech/patient.html
@@ -42,51 +42,53 @@
         </ul>
     </div>
 
-    <div class="navbar"></div>
+    <main>
+        <div class="navbar">
+            <!-- PATIENT RECORD -->
+            <div class="patient-header">
+                <p>LABORATORY REPORTS</p>
+            </div>  
+        </div>
     
-    <!-- PATIENT RECORD -->
-    <div class="patient-header">
-        <p>LABORATORY REPORTS</p>
-    </div>
-
-    <div class="patient-table">
-        <table id="patientTable" class="table table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>SUBJECT</th>
-                    <th>PATIENT NAME</th>
-                    <th>GENDER</th>
-                    <th>PHYSICIAN</th>
-                    <th>DATE</th>
-                    <th>LAB REPORT</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for labrequest in labrequests %}
-                <tr>
-                    <td>{{ labrequest[2] }}</td>
-                    <td>{{ labrequest[3] }}</td>
-                    <td>{{ labrequest[4] }}</td>
-                    <td>{{ labrequest[5] }}</td>
-                    <td>{{ labrequest[7] }}</td>
-                    <td>
-                        <!-- VIEW RECORD -->
-                        <form method="GET" action="/medtech/laboratory_report/">
-                            <div class="delete-icon">
-                                <input id="order_id" name="order_id" value="{{ labrequest[0] }}" hidden>
-                                <input id="patient_id" name="patient_id" value="{{ labrequest[1] }}" hidden>
-                                <input id="report_id" name="report_id" value="{{ labrequest[6] }}" hidden>
-                                <button type="submit" style="background: none; border: none;">
-                                    <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Lab Report">
-                                </button>
-                            </div>
-                        </form> 
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+        <div class="patient-table">
+            <table id="patientTable" class="table table-striped" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>SUBJECT</th>
+                        <th>PATIENT NAME</th>
+                        <th>GENDER</th>
+                        <th>PHYSICIAN</th>
+                        <th>DATE</th>
+                        <th>LAB REPORT</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for labrequest in labrequests %}
+                    <tr>
+                        <td>{{ labrequest[2] }}</td>
+                        <td>{{ labrequest[3] }}</td>
+                        <td>{{ labrequest[4] }}</td>
+                        <td>{{ labrequest[5] }}</td>
+                        <td>{{ labrequest[7] }}</td>
+                        <td>
+                            <!-- VIEW RECORD -->
+                            <form method="GET" action="/medtech/laboratory_report/">
+                                <div class="delete-icon">
+                                    <input id="order_id" name="order_id" value="{{ labrequest[0] }}" hidden>
+                                    <input id="patient_id" name="patient_id" value="{{ labrequest[1] }}" hidden>
+                                    <input id="report_id" name="report_id" value="{{ labrequest[6] }}" hidden>
+                                    <button type="submit" style="background: none; border: none;">
+                                        <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Lab Report">
+                                    </button>
+                                </div>
+                            </form> 
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src=" https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
