--- a/app/templates/admin/user_management/user_management.html
+++ b/app/templates/admin/user_management/user_management.html
@@ -42,68 +42,76 @@
         </ul>
     </div>
 
-    <div class="navbar"></div>
+    <main>
+        <div class="navbar">
+            <!-- USER RECORD -->
+            <div class="user-header">
+                <p>USERS</p>
+            </div>
+        </div>
+        
+        <div class="user-table">
+            <table id="userTable" class="table table-striped" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>USERNAME</th>
+                        <th>PASSWORD</th>
+                        <th>FIRST NAME</th>
+                        <th>MIDDLE NAME</th>
+                        <th>LAST NAME</th>
+                        <th>GENDER</th>
+                        <th>USER ROLE</th>
+                        <th>ACTION</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for user in users %}
+                    <tr>
+                        <td>{{ user.id }}</td>
+                        <td>{{ user.username }}</td>
+                        <td>{{ user.password }}</td>
+                        <td>{{ user.first_name }}</td>
+                        <td>{{ user.middle_name }}</td>
+                        <td>{{ user.last_name }}</td>
+                        <td>{{ user.gender }}</td>
+                        <td>{{ user.user_role }}</td>
+                        <td>
+                            <div class="action-icon-container">
+                                <!-- VIEW INFO -->
+                                <form method="GET" action="/admin/user_info/">
+                                    <div class="delete-icon">
+                                        <input id="user_id" name="user_id" value="{{ user['id'] }}" type="hidden">
+                                        <button type="submit" style="background: none; border: none;">
+                                            <img src="{{ url_for('static', filename='images/Folder.png') }}" title="User Info">
+                                        </button>
+                                    </div>
+                                </form>
     
-    <!-- USER RECORD -->
-    <div class="user-header">
-        <p>USERS</p>
-    </div>
+                                <!-- DELETE INFO-->
+                                <form id="deleteForm_{{ user.id }}" method="POST" action="{{ url_for('admin.delete_user') }}">
+                                    <div class="delete-icon">
+                                        <input id="user_id" name="user_id" value="{{ user.id }}" type="hidden">
+                                        <button type="button" onclick="confirmation('{{ user.id }}')" style="background: none; border: none;">
+                                            <img src="{{ url_for('static', filename='images/Delete.png') }}" title="Delete Record">
+                                        </button>
+                                    </div>
+                                </form>
+                            </div>
     
-    <div class="user-table">
-        <table id="userTable" class="table table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>USERNAME</th>
-                    <th>PASSWORD</th>
-                    <th>FIRST NAME</th>
-                    <th>MIDDLE NAME</th>
-                    <th>LAST NAME</th>
-                    <th>GENDER</th>
-                    <th>USER ROLE</th>
-                    <th>ACTION</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for user in users %}
-                <tr>
-                    <td>{{ user.id }}</td>
-                    <td>{{ user.username }}</td>
-                    <td>{{ user.password }}</td>
-                    <td>{{ user.first_name }}</td>
-                    <td>{{ user.middle_name }}</td>
-                    <td>{{ user.last_name }}</td>
-                    <td>{{ user.gender }}</td>
-                    <td>{{ user.user_role }}</td>
-                    <td>
-                        <div class="action-icon-container">
-                            <!-- VIEW INFO -->
-                            <form method="GET" action="/admin/user_info/">
-                                <div class="delete-icon">
-                                    <input id="user_id" name="user_id" value="{{ user['id'] }}" type="hidden">
-                                    <button type="submit" style="background: none; border: none;">
-                                        <img src="{{ url_for('static', filename='images/Folder.png') }}" title="User Info">
-                                    </button>
-                                </div>
-                            </form>
+                        </td>
+                    </tr>   
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
-                            <!-- DELETE INFO-->
-                            <form id="deleteForm_{{ user.id }}" method="POST" action="{{ url_for('admin.delete_user') }}">
-                                <div class="delete-icon">
-                                    <input id="user_id" name="user_id" value="{{ user.id }}" type="hidden">
-                                    <button type="button" onclick="confirmation('{{ user.id }}')" style="background: none; border: none;">
-                                        <img src="{{ url_for('static', filename='images/Delete.png') }}" title="Delete Record">
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-
-                    </td>
-                </tr>   
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+        <a href="{{ url_for('admin.add_user') }}">
+            <div class="add-icon">
+                <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
+            </div>
+        </a>
+    </main>
 
     <!-- Confirmation Modal -->
     <div id="confirmationModal" class="modal" style="display: none;">
@@ -160,12 +168,6 @@
             </div>
         </div>
     {% endif %}
-    
-    <a href="{{ url_for('admin.add_user') }}">
-        <div class="add-icon">
-            <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
-        </div>
-    </a>
 
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src=" https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
