--- a/app/templates/doctor/dashboard/dashboard.html
+++ b/app/templates/doctor/dashboard/dashboard.html
@@ -62,17 +62,19 @@
         </ul>
     </div>
 
-   
-    <div class="doctor-bg">
-        <img src="{{ url_for('static', filename='images/Doctor BG.png') }}">
-        <div class="greetings-name">
-            <p>Welcome,</p>
-            <h2>{{ info[0] }}</h2>
+   <main>
+        <div class="doctor-bg">
+            <img src="{{ url_for('static', filename='images/Doctor BG.png') }}">
+            <div class="greetings-name">
+                <p>Welcome,</p>
+                <h2>{{ info[0] }}</h2>
+            </div>
+            <div class="greetings">
+                <p>Have a nice day at work!</p>
+            </div>
         </div>
-        <div class="greetings">
-            <p>Have a nice day at work!</p>
-        </div>
-    </div>
+   </main>
+    
     
 
 {% endblock %}
