--- a/app/templates/doctor/patient/lab_results.html
+++ b/app/templates/doctor/patient/lab_results.html
@@ -67,68 +67,69 @@
         </ul>
     </div>
 
-    <!-- NAVBAR AND TABS FOR PATIENT RECORDS -->
-    <div class="navbar"></div>
-    
-    <a class="back-icon" href="{{ url_for('doctor.patient') }}">
-        <img src="{{ url_for('static', filename='images/Back.png') }}">
-    </a>
-    
-    <ul class="nav nav-underline">
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('doctor.patient_record', patient_id=patient_id) }}">PATIENT INFORMATION</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('doctor.medical_history', patient_id=patient_id) }}">MEDICAL HISTORY</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"  href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">MEDICAL ASSESSMENT</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page">LABORATORY REPORTS</a>
-        </li>
-    </ul>
+    <main>
+        <!-- NAVBAR AND TABS FOR PATIENT RECORDS -->
+        <div class="navbar">
+            <ul class="nav nav-underline">
+                <a class="back-icon" href="{{ url_for('doctor.patient') }}">
+                    <img src="{{ url_for('static', filename='images/Back.png') }}">
+                </a>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('doctor.patient_record', patient_id=patient_id) }}">PATIENT INFORMATION</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('doctor.medical_history', patient_id=patient_id) }}">MEDICAL HISTORY</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"  href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">MEDICAL ASSESSMENT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page">LABORATORY REPORTS</a>
+                </li>
+            </ul>
 
-    <!-- LABORATORY RESULTS -->
-    <div class="patient-bg">
-        <div class="assessment-table">
-            <table id="example" class="table table-striped" style="width:100%">
-                <thead>
-                    <tr>
-                        <th>SUBJECT</th>
-                        <th>DATE</th>
-                        <th>ACTION</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for labreport in labreports %}
-                    <tr>
-                        <td>{{ labreport[0] }}</td>
-                        <td>{{ labreport[1] }}</td>
-                        <td>
-                            <!-- RESULTS -->
-                            <form method="GET" action="/doctor/results/">
-                                <div class="delete-icon">
-                                    <input id="order_id" name="order_id" value="{{ labreport[2] }}" hidden>
-                                    <input id="patient_id" name="patient_id" value="{{ labreport[3] }}" hidden>
-                                    <input id="report_id" name="report_id" value="{{ labreport[4] }}" hidden>
-                                    <button type="submit" style="background: none; border: none;">
-                                        <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Patient Record">
-                                    </button>
-                                </div>
-                            </form> 
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+            <a href="{{ url_for('doctor.labtest_request', patient_id=patient_id) }}">
+                <div class="add-icon">
+                    <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
+                </div>
+            </a>
         </div>
-    </div>
 
-    <a href="{{ url_for('doctor.labtest_request', patient_id=patient_id) }}">
-        <div class="add-icon">
-            <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
+        <!-- LABORATORY RESULTS -->
+        <div class="patient-bg">
+            <div class="assessment-table">
+                <table id="example" class="table table-striped" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>SUBJECT</th>
+                            <th>DATE</th>
+                            <th>ACTION</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for labreport in labreports %}
+                        <tr>
+                            <td>{{ labreport[0] }}</td>
+                            <td>{{ labreport[1] }}</td>
+                            <td>
+                                <!-- RESULTS -->
+                                <form method="GET" action="/doctor/results/">
+                                    <div class="delete-icon">
+                                        <input id="order_id" name="order_id" value="{{ labreport[2] }}" hidden>
+                                        <input id="patient_id" name="patient_id" value="{{ labreport[3] }}" hidden>
+                                        <input id="report_id" name="report_id" value="{{ labreport[4] }}" hidden>
+                                        <button type="submit" style="background: none; border: none;">
+                                            <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Patient Record">
+                                        </button>
+                                    </div>
+                                </form> 
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </a>
+    </main>
 
 {% endblock %}  
