--- a/app/templates/doctor/patient/prescription.html
+++ b/app/templates/doctor/patient/prescription.html
@@ -65,99 +65,118 @@
         </ul>
     </div>
 
-    <!-- NAVBAR AND TABS FOR PATIENT RECORDS -->
-    <div class="navbar"></div>
-    <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
-    
-    <a class="back-icon" href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">
-        <img src="{{ url_for('static', filename='images/Back.png') }}">
-    </a>
-
-    <ul class="nav nav-underline">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page">PRESCRIPTION</a>
-        </li>
-    </ul>
-
-    <form id="prescriptionForm" action="{{ url_for('doctor.prescription') }}">
-
-        <!-- ASSESSMENT ID -->
-        <div class="inputBox code" style="display: none;">
-            <input disabled name="assessment_id" value="{{ consultation[0] }}">
-            <input hidden name="assessment_id" value="{{ consultation[0] }}" >
-        </div>
-
-        <!-- PATIENT ID -->
-        <div class="inputBox code" style="display: none;">
-            <input disabled name="patient_id" value="{{ consultation[1] }}">
-            <input hidden name="patient_id" value="{{ consultation[1] }}" >
-        </div>
-
-        <!-- PRESCRIPTION -->
-        <div class="patient-bg prescription">
-            <div class="cms-logo prescription">
-                <p class="doc">Doc</p>
-                <h4 class="care">Care</h4>
-            </div>
-
-            <div class="rx">
-                <img src="{{ url_for('static', filename='/images/Rx.png') }}">
-            </div>
-
-            <div class="line-border"></div>
-
-            <h4 class="columnA">NAME:</h4>
-            <p class="columnB">{{ patient[1] }} {{ patient[3] }}</p>
-
-            <h4 class="columnC">DATE:</h4>
-            <p class="columnD" id="prescriptionDate"></p>
-
-            <h4 class="columnA address">ADDRESS:</h4>
-            <p class="columnB p_adress">{{ patient[10] }}</p>
-
-            <h4 class="columnC gender">GENDER:</h4>
-            <p class="columnD p_gender">{{ patient[6] }}</p>
-
-            <center>
-                <div class="med-header" id="p_header"  style="display: none;">PRESCRIPTION</div>
-            
-                <!-- PRESCRIPTION -->
-                <div class="prescription-container" id="prescriptionContainer" style="display: none;">
-                    
-                </div>
-
-                <table class="prescription-table" id="prescriptionTable">
-                    <tbody>
-                        {% for prescription in prescriptions %}
-                            <tr>
-                                <td colspan="5" style="text-align: left;">{{ prescription[0] }} {{ prescription[1] }}<br>
-                                    {{ prescription[2] }}<br>
-                                    {{ prescription[3] }}<br>
-                                    {{ prescription[4] }}
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </center>
-
-            <div class="page-break"></div>
-            <h4 class="doctor">{{ doctor[0] }} {{ doctor[1] }}, MD, FPPS</h4>
-            <h4 class="license">License No. <p style="text-decoration:underline;"> 84303</p> </h4>
-        
-            <div class="btn-container">
-                <button type="button" class="btn-prescription" id="addButton" style="display: none;">+ ADD PRESCRIPTION</button>
-            </div>
-
-            <div class="btn-container">
-                <button class="btn-submit" id="submitData" type="button" style="display: none;">SUBMIT</button>
-            </div>
+    <main>
+        <!-- NAVBAR AND TABS FOR PATIENT RECORDS -->
+        <div class="navbar">
+            <ul class="nav nav-underline">
+                <a class="back-icon" href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">
+                    <img src="{{ url_for('static', filename='images/Back.png') }}">
+                </a>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page">PRESCRIPTION</a>
+                </li>
+            </ul>
 
             <button class="print-icon" onclick="window.print()" id="printButton">
-                <img id="editIcon" src="{{ url_for('static', filename='images/Print.png') }}">
+                <img src="{{ url_for('static', filename='images/Print.png') }}">
             </button>
+            <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
         </div>
-    </form>
+
+
+        <form id="prescriptionForm" action="{{ url_for('doctor.prescription') }}">
+
+            <!-- ASSESSMENT ID -->
+            <div class="inputBox code" style="display: none;">
+                <input disabled name="assessment_id" value="{{ consultation[0] }}">
+                <input hidden name="assessment_id" value="{{ consultation[0] }}" >
+            </div>
+
+            <!-- PATIENT ID -->
+            <div class="inputBox code" style="display: none;">
+                <input disabled name="patient_id" value="{{ consultation[1] }}">
+                <input hidden name="patient_id" value="{{ consultation[1] }}" >
+            </div>
+
+            <!-- PRESCRIPTION -->
+            <div class="patient-bg prescription">
+                <div class="cms-logo prescription">
+                    <p class="doc">Doc</p>
+                    <h4 class="care">Care</h4>
+                </div>
+
+                <div class="head_prescription">
+                    <div class="rx">
+                        <img src="{{ url_for('static', filename='/images/Rx.png') }}">
+                    </div>
+    
+                    <div class="line-border"></div>
+                </div>
+
+                <div class="body_prescription">
+                    <div style="display: block">
+                        <div class="name">
+                            <h4>NAME:</h4>
+                            <p>{{ patient[1] }} {{ patient[3] }}</p>
+                        </div>
+                        <div class="address">
+                            <h4>ADDRESS:</h4>
+                            <p>{{ patient[10] }}</p>
+                        </div>
+                    </div>
+                    
+                    <div style="display: block;">
+                        <div class="date">
+                            <h4>DATE:</h4>
+                            <p id="prescriptionDate"></p>
+                        </div>
+        
+                        <div class="gender_pres">
+                            <h4>GENDER:</h4>
+                        <p>{{ patient[6] }}</p>
+                        </div>
+                    </div>
+                </div>
+
+                <center>
+                    <div class="med-header" id="p_header"  style="display: none;">PRESCRIPTION</div>
+                
+                    <!-- PRESCRIPTION -->
+                    <div class="prescription-container" id="prescriptionContainer" style="display: none;">
+                        
+                    </div>
+
+                    <table class="prescription-table" id="prescriptionTable">
+                        <tbody>
+                            {% for prescription in prescriptions %}
+                                <tr>
+                                    <td colspan="5" style="text-align: left;">{{ prescription[0] }} {{ prescription[1] }}<br>
+                                        {{ prescription[2] }}<br>
+                                        {{ prescription[3] }}<br>
+                                        {{ prescription[4] }}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+
+                    <div class="btn-container">
+                        <button type="button" class="btn-prescription" id="addButton" style="display: none;">+ ADD PRESCRIPTION</button>
+                    </div>
+    
+                    <div class="btn-container">
+                        <button class="btn-submit" id="submitData" type="button" style="display: none;">SUBMIT</button>
+                    </div>
+
+                    <div class="foot">
+                        <div class="page-break"></div>
+                        <h4 class="doctor">{{ doctor[0] }} {{ doctor[1] }}, MD, FPPS</h4>
+                        <h4 class="license">License No. <p style="text-decoration:underline;"> 84303</p> </h4>
+                    </div>
+                </center>
+            </div>
+        </form>
+    </main>
 
     <div id="successModal" class="modal" style="display: none;">
         <div class="modal-dialog">
