--- a/app/templates/medtech/dashboard.html
+++ b/app/templates/medtech/dashboard.html
@@ -47,46 +47,51 @@
             </li>
         </ul>
     </div>
-    <!-- DASHBOARD -->
-    <div class="doctor-bg">
-        <img src="{{ url_for('static', filename='images/Medtech BG.png') }}">
-        <div class="greetings-name">
-            <p>Welcome,</p>
-            <h2>{{ info[0] }}</h2>
-        </div>
-        <div class="greetings">
-            <p>Have a nice day at work!</p>
-        </div>
-    </div>
 
-    <div class="notif-header">
-        <div class="notif-box">
-          <p class="request-header">LABORATORY TEST REQUEST</p>
-          <span id="notifs"></span>
+    <main>
+        <!-- DASHBOARD -->
+        <div class="doctor-bg">
+            <img src="{{ url_for('static', filename='images/Medtech BG.png') }}">
+            <div class="greetings-name">
+                <p>Welcome,</p>
+                <h2>{{ info[0] }}</h2>
+            </div>
+            <div class="greetings">
+                <p>Have a nice day at work!</p>
+            </div>
         </div>
-    </div>
 
-    <div class="notification-container">
-        <div id="notificationList">
-            {% for labrequest in labrequests %}
-                <form method="GET" action="/medtech/laboratory_test/">
-                    <input id="order_id" name="order_id" value="{{ labrequest[0] }}" hidden>
-                    <input id="patient_id" name="patient_id" value="{{ labrequest[1] }}" hidden>
-                    <button style="background: none; border: none; font-size: 16px;">
-                        <div class="notif_card unread" data-id="{{ labrequest[0] }}">
-                            <div class="description">
-                                <p class="user_activity">
-                                    <strong>DR. {{ labrequest[2] }}</strong> sent you a laboratory job order for patient
-                                    <b>{{ labrequest[3] }}</b>
-                                </p>
-                                <p class="time" id="time"></p>
-                            </div>
-                        </div>
-                    </button>
-                </form>
-            {% endfor %}
+        <div class="notif-header">
+            <div class="notif-box">
+            <p class="request-header">LABORATORY TEST REQUEST</p>
+            <span id="notifs"></span>
+            </div>
         </div>
-    </div>
+        <center>
+            <div class="notification-container">
+                <div id="notificationList">
+                    {% for labrequest in labrequests %}
+                        <form method="GET" action="/medtech/laboratory_test/">
+                            <input id="order_id" name="order_id" value="{{ labrequest[0] }}" hidden>
+                            <input id="patient_id" name="patient_id" value="{{ labrequest[1] }}" hidden>
+                            <button style="background: none; border: none; font-size: 16px;">
+                                <div class="notif_card unread" data-id="{{ labrequest[0] }}">
+                                    <div class="description">
+                                        <p class="user_activity">
+                                            <strong>DR. {{ labrequest[2] }}</strong> sent you a laboratory job order for patient
+                                            <b>{{ labrequest[3] }}</b>
+                                        </p>
+                                        <p class="time" id="time"></p>
+                                    </div>
+                                </div>
+                            </button>
+                        </form>
+                    {% endfor %}
+                </div>
+            </div>
+        </center>
+        
+    </main>
 
     <script>
         // LAB REQUEST NOTIFICATION
