Minor changes is side navbar.

--- a/app/templates/admin/profile.html
+++ b/app/templates/admin/profile.html
@@ -27,19 +27,21 @@
                 <p>Profile</p>
             </li>
         </ul>
-        <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/Xerxes.png') }}" class="user-img">
-            <div>
-                <h3>{{ info[0] }}</h3>
-                <p>{{ info[1] }}</p>
+        <div class="foot-nav">
+            <div class="sidenav-user-bg">
+                <img src="{{ url_for('static', filename='images/Xerxes.png') }}" class="user-img">
+                <div>
+                    <h3>{{ info[0] }}</h3>
+                    <p>{{ info[1] }}</p>
+                </div>
             </div>
+            <ul>
+                <li class="logout" id="logoutButton">
+                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
+                    <p>Logout</p>
+                </li>
+            </ul>
         </div>
-        <ul>
-            <li class="logout" id="logoutButton">
-                <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                <p>Logout</p>
-            </li>
-        </ul>
     </div>
 
 {% endblock %}  
