--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -55,47 +55,57 @@ main {
 
 /* logout */
 .logout {
-    margin-left: 4px;
+    margin-left: 3px;
 }
 
-.logout:hover img {
-    transform: translateY(0%);
+.logout:active {
+    transform: translateY(2%);
 }
 
 /* notifications */
-.notifications {
-    width: 80%;  
+.notifications {  
     height: 45px; 
-    margin-left: 6px;
+    margin-left: 5px;
+    margin-bottom: 15px;
 }
 
 .notifications:active {
-    transform: translateY(1%);
+    transform: translateY(2%);
 }
 
 /* icon */
 .icon-bg {
-    width: 80%;  
+    width: 85%;  
     height: 40px; 
     border-radius: 20%; 
-    transition: width 0.3s;
-    margin-left: 6px;
+    transition: width 0.2s;
+    margin-left: 5px;
+}
+
+.icon-bg img {
+    filter: hue-rotate(5deg) brightness(150%);
 }
 
 .icon-bg:hover {
     transition: 0.5s;
-    background-color: rgba(255, 255, 255, 0.600);
+    background-color: rgba(255, 255, 255, 0.775);
     border-radius: 20%;
+    width: 85%;
+}
+
+.icon-bg:hover img {
+    margin-left: 15px;
+    width: 23px;
 }
 
 /* selected icon */
 .selected-icon-bg {
-    width: 80%;  
+    width: 85%;  
     height: 40px;   
     background-color: white; 
     border-radius: 20%; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    margin-left: 6px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
+    margin-left: 5px;
 }
 
 /* icon text styles */
@@ -107,7 +117,7 @@ main {
     visibility: hidden;
     transform: translateY(-50%);
     top: 18px;
-    left: 30px;
+    left: 20px;
     padding: 10px;
     border-radius: 10px;
     background-color: var(--darkBlue);
@@ -116,7 +126,7 @@ main {
 }
 
 .icon-bg:hover p, .logout:hover p, .selected-icon-bg:hover p {
-    left: 40px;
+    left: 25px;
     opacity: 1;
     visibility: visible;
     z-index: 99;
@@ -142,8 +152,8 @@ a {
 }
 
 ul li img {
-    margin-left: 15px;
-    width: 21px;
+    margin-left: 16px;
+    width: 21px; 
 }
 
 ul li p {
@@ -166,8 +176,7 @@ ul li p {
     align-items: center;
     height: 50px; 
     overflow: hidden;
-    margin-bottom: 10px;
-    margin-top: 35%;
+    margin-bottom: 15px;
 }
 
 .sidenav-user-bg:hover {
@@ -199,6 +208,12 @@ ul li p {
     border-radius: 100%;
     margin-left: 10px;
 }
+
+.foot-nav {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 10px;
+  }
 
 /* -------------------------------------------- DASHBOARD -------------------------------------------- */
 .date-time {
