integrate flask-mail into the app in sending the password to gmail of user

--- a/app/templates/admin/user_management/add_user.html
+++ b/app/templates/admin/user_management/add_user.html
@@ -92,7 +92,7 @@
                 <div class="u_row thirdRow">
                     
                     <div class="inputBox email">
-                        <input type="text" name="email" autocomplete="off">
+                        <input type="email" name="email" autocomplete="off">
                         <span>Email</span>
                     </div>
 
